# openfang

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
agents/rustchain-miner/: agent.toml
crates/openfang-clawrtc/: Cargo.toml
crates/openfang-clawrtc/src/: bottube.rs  cli.rs  client.rs  error.rs  grazer.rs  hardware.rs  keystore.rs  lib.rs  miner.rs  tools.rs  wallet.rs
crates/openfang-clawrtc/src/fingerprint/: anti_emulation.rs  cache_timing.rs  clock_drift.rs  instruction_jitter.rs  mod.rs  simd_identity.rs  thermal_drift.rs
crates/openfang-cli/src/: main.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: tool_runner.rs
scripts/: install.ps1
